[tool.poetry]
name = "rtui"
version = "0.1.0"
description = "Robot Terminal User Interface for Student Robotics Kit"
authors = [
    "Dan Trickey <srobo-mcgowan@trickey.io>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trickeydan/mcgowan"
homepage = "https://github.com/trickeydan/mcgowan"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
