[tool.poetry]
name = "rtui"
version = "0.1.1"
description = "Robot Terminal User Interface for Student Robotics Kit"
authors = [
    "Dan Trickey <srobo-rtui@trickey.io>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/srobo/robot-tui"
homepage = "https://github.com/srobo/robot-tui"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
prompt-toolkit = "^3.0.31"
astoria = "^0.11.1"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}

[tool.poetry.scripts]
rtui = 'rtui.app:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
